--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+:root{
+--text-color:#111517;
+--body-bgc:#fafafa;
+--elBg:#202C36;
+}
+
 html{
   height: 100%;
   scroll-behavior: smooth;
@@ -9,30 +15,40 @@ html{
 box-sizing:inherit;
 }
 
+
 body{
   height: 100%;
 display: flex;
 padding: 0;
 margin: 0;
-font-size: 16px;
-line-height: 1.5;
-font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+font-size: 14px;
+line-height: 16px;
+font-family:  "Nunito Sans", "Helvetica Neue", Helvetica, sans-serif;
 flex-direction: column;
-background-color: #fff;
-color: #000;
+background-color: var(--body-bgc);
+color: var(--text-color);
+}
+a{
+  text-decoration: none;
 }
 img{
-  width: 100%;
+  max-width: 100%;
   height: auto;
 
 
 }
+/* dark mode */
+.dark-mode{
+  --text-color:#fff;
+  --body-bgc:#202c36;
+  --elBg:#2b3844;
+  }
 
 .container{
   width: 100%;
-  max-width: 1200px;
-padding-left: 50px;
-padding-right: 50px;
+  max-width: 1320px;
+padding-left: 20px;
+padding-right: 2 0px;
 margin-left: auto;
 margin-right: auto;
 }
