--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 :root{
 --text-color:#111517;
 --body-bgc:#fafafa;
---elBg:#202C36;
+--elBg: #fff;
 }
 
 html{
@@ -42,13 +42,14 @@ img{
   --text-color:#fff;
   --body-bgc:#202c36;
   --elBg:#2b3844;
+
   }
 
 .container{
   width: 100%;
   max-width: 1320px;
 padding-left: 20px;
-padding-right: 2 0px;
+padding-right: 20px;
 margin-left: auto;
 margin-right: auto;
 }
@@ -56,4 +57,65 @@ margin-right: auto;
 .main-content{
   flex-grow: 1;
 
+}
+/* /.site-header */
+.site-header {
+padding-top: 24px;
+padding-bottom: 24px;
+background-color:var(--elBg);
+box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.06);
+white-space: nowrap;
+
+}
+
+.site-header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.container {
+}
+.site-header-logo {
+  color: var(--text-color);
+font-family: "Nunito Sans";
+font-size: 24px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+}
+.site-header-logo:hover{
+  opacity: 0.8;
+}
+.site-header-logo:active{
+  opacity: 0.6;
+}
+.site-header-theme-toggler {
+padding: 0;
+border: 0;
+background-color:transparent;
+cursor:pointer;
+color: var(--text-color);
+
+}
+.site-header-theme-toggler:hover{
+  opacity: 0.7;
+}
+.site-header-theme-toggler:active{
+  opacity: 0.6;
+}
+.site-header-theme-toggler-inner{
+  display: flex;
+  align-items: center;
+
+
+}
+
+.site-theme-toggler-moon {
+}
+.site-header-theme-toggler-text {
+  margin-left: 8px;
+  font-size: 16px;
+font-style: normal;
+font-weight: 600;
+color: var(--text-color);
 }
