--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,8 @@ font-family:  "Nunito Sans", "Helvetica Neue", Helvetica, sans-serif;
 flex-direction: column;
 background-color: var(--body-bgc);
 color: var(--text-color);
+transition: background-color 0.4s ease,
+color 0.4s ease;
 }
 a{
   text-decoration: none;
