--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,8 @@ margin-right: auto;
 
 .main-content{
   flex-grow: 1;
+  padding-bottom: 48px;
+  padding-top: 48px;
 
 }
 /* /.site-header */
@@ -120,4 +122,31 @@ color: var(--text-color);
 font-style: normal;
 font-weight: 600;
 color: var(--text-color);
+}
+/* filters */
+
+.filters {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.filter-search-input {
+  min-width: 480px;
+  padding: 18px 74px;
+  border: 0;
+  border-radius: 5px;
+  background-color: var(--elBg);
+  color: var(--text-color);
+box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.05);
+}
+.filters-region-select {
+  min-width: 200px;
+  background-color: var(--elBg);
+  color: var(--text-color);
+  padding: 18px 24px;
+  border: 0;
+  border-radius: 5px;
+box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.05);
+
+
 }
