--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,7 @@ color: var(--text-color);
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 48px;
 }
 .filter-search-input {
   min-width: 480px;
@@ -138,6 +139,7 @@ color: var(--text-color);
   background-color: var(--elBg);
   color: var(--text-color);
 box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.05);
+margin-left: 80px;
 }
 .filters-region-select {
   min-width: 200px;
@@ -149,4 +151,77 @@ box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.05);
 box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.05);
 
 
+}
+/* index-countries */
+
+.index-countries-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -75px;
+  padding: 0;
+  margin: 0;
+list-style: none;
+margin-bottom: -75px;
+  /* background-color: var(--elBg);
+  color: var(--text-color);
+  border-radius: 5px;
+  overflow: hidden; */
+}
+.index-countries-item {
+  width: calc(25% - 75px);
+margin-left: 75px;
+margin-bottom: 75px;
+}
+
+.index-country {
+   background-color: var(--elBg);
+  color: var(--text-color);
+  border-radius: 5px;
+  overflow: hidden;
+  box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.03);
+
+}
+.index-country-flag {
+  width: 100%;
+  height: 160px;
+object-fit: cover;
+
+}
+.index-country-info {
+  padding: 24px 18px 48px;
+}
+.index-country-name {
+  margin-top: 0;
+  font-family: "Nunito Sans";
+font-size: 18px;
+margin-bottom: 16px;
+font-weight: bold;
+line-height: 26px;
+}
+.index-country-link{
+color: var(--text-color);
+}
+.index-country-detailes {
+  margin: 0;
+}
+.index-country-details-item{
+  display: flex;
+flex-wrap: wrap;
+flex-grow: 1;
+}
+/* .index-country-name-go{
+  display: flex;
+flex-wrap: wrap;
+flex-grow: 1;
+} */
+.index-country-details-item:not(:last-child) {
+  margin-bottom: 8px;
+}
+.index-country-details-tittle {
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: 600;
+}
+.index-country-details-value {
+  margin-left: 4px;
 }
